﻿Music Room Interface
--------------------
Changelog
--------------------


NOTE: This file only lists changes to the user interface program.
      Refer to the bgmlib changelog for changes to supported games and the back-end engine.


- 2024/07/05 (Version 2.3.0)
* Added preliminary support for TH13.5, TH14.5, and TH15.5 and changed the included BGM files to fit.
* Properly handle output filenames containing double quotes by replacing them with single quotes.


- 2024/06/28 (Version 2.2.9)
* Corrected wiki page retrieval that became broken due to changes in the <text> element of the Export.
* Added BGM files for TH18, TH18.5, TH19, MCD9.5, and MCD10

----

- 2020/06/22 (Version 2.2.8)
* Wrong names for tracks in Touhou 16.5 BGM file was fixed

----

- 2019/08/12 (Version 2.2.7)
* Added BGM files for Touhou 17

----

- 2018/08/11 (Version 2.2.6)
* Added BGM files for Touhou 15.5 (tagging only) and Touhou 16.5

----

- 2017/08/11 (Version 2.2.5)
* Added BGM files for Touhou 16

----

- 2017/06/04 (Version 2.2.4)
* Fix bug with Tasofro extraction not ignoring the Remove Opening Silence option.

----

- 2017/06/03 (Version 2.2.3)
* Fix parsing of references, now removing them as intended.

----

- 2017/05/29 (Version 2.2.2)
* Updated curl to fix automatic track name and comment translation downloading from Touhou Wiki

----

- 2011/05/14 (Version 2.2)
* Added an appropriate warning for custom encoders when dealing with lossy music
* Colored the active status line blue

----

- 2011/04/15 (Version 2.1)
* Added exclusive support for games compressed by the Touhou Vorbis Compressor (http://bit.ly/touhou_vorbis).

----

- 2011/03/28 (Version 2.0.1)
* Title bar now shows the active game's name and our Akyu icon
* Fixed a crash on game loading

----

- 2011/03/08 (Version 2.0)

*sigh* where should I start.

New features:
* Renamed project to "Music Room Interface", which is a way less bulky name, sounds better, and should still preserve the essence