@@ -65,7 +65,7 @@ FXString OutPath;	// Output directory
 // String Constants
       FXString PrgName = "Music Room Interface";
 	  FXString WebPage = "https://github.com/DTM9025/musicroom";
-const FXString PrgVer = "v2.3.0";
+const FXString PrgVer = "v2.4.0";
 const FXString NoGame = "(no game loaded)";
       FXString CfgFile = "musicroom.cfg";
 	  FXString LGDFile = "gamedirs.cfg";
